package org.example.domain.player;

public interface IPlayer {
    int getColor();
}